--- a/travel/bower.json
+++ b/travel/bower.json
@@ -2,7 +2,8 @@
   "name": "ex1",
   "private": true,
   "dependencies": {
-    "bootstrap-sass": "~3.3.5"
+    "bootstrap-sass": "~3.3.5",
+    "holmes.js": "^1.13.3"
   },
   "overrides": {
     "bootstrap-sass": {
