things man we just got things man; and typescale

--- a/travel/bower.json
+++ b/travel/bower.json
@@ -2,8 +2,7 @@
   "name": "ex1",
   "private": true,
   "dependencies": {
-    "bootstrap-sass": "~3.3.5",
-    "holmes.js": "^1.13.3"
+    "bootstrap-sass": "~3.3.5"
   },
   "overrides": {
     "bootstrap-sass": {
