--- a/travel/bower.json
+++ b/travel/bower.json
@@ -1,9 +1,7 @@
 {
   "name": "ex1",
   "private": true,
-  "dependencies": {
-    "bootstrap-sass": "~3.3.5"
-  },
+  "dependencies": {},
   "overrides": {
     "bootstrap-sass": {
       "main": [
